.metadata/.plugins/org.eclipse.cdt.ui/LED_RAW_TEST.build.log
11:41:46 **** Incremental Build of configuration Debug for project LED_RAW_TEST ****
make -j11 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/read_pin.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/read_pin.d" -MT"Src/read_pin.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/read_pin.o"
In file included from ../Src/read_pin.c:10:
../Inc/blink_led.h:25:16: warning: 'boardLedStatus' initialized and declared 'extern'
   25 | extern uint8_t boardLedStatus = OFF;
      |                ^~~~~~~~~~~~~~
In file included from ../Src/main.c:20:
../Inc/blink_led.h:25:16: warning: 'boardLedStatus' initialized and declared 'extern'
   25 | extern uint8_t boardLedStatus = OFF;
      |                ^~~~~~~~~~~~~~
../Src/main.c:24:4: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   24 |   #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |    ^~~~~~~
../Src/read_pin.c: In function 'readPC0State':
../Src/read_pin.c:15:57: error: lvalue required as left operand of assignment
   15 |         *pGPIOC_CLK_EN & ~(1 << 2) ? 1 : *pGPIOC_CLK_EN |= (1 << 2);
      |                                                         ^~
../Src/read_pin.c:18:54: error: assignment of read-only location '*pGPIOC_MODE_IN'
   18 |         *pGPIOC_MODE_IN & (3 << 0) ? *pGPIOC_MODE_IN &= ~(3 << 0) : 1;
      |                                                      ^~
../Src/read_pin.c:21:28: error: 'ledStatus' undeclared (first use in this function)
   21 |         *pGPIOC_INDR & 1 ? ledStatus = ON : ledStatus = OFF;
      |                            ^~~~~~~~~
../Src/read_pin.c:21:28: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:31: Src/read_pin.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j11 all" terminated with exit code 2. Build might be incomplete.

11:41:46 Build Failed. 5 errors, 3 warnings. (took 434ms)

